fix product district page add bootstrap tagsinput

--- a/shopmanager/shopback/items/templates/items/product_district_page.html
+++ b/shopmanager/shopback/items/templates/items/product_district_page.html
@@ -4,14 +4,13 @@
     <title>商品库位分配</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
      <link href="{{ STATIC_URL }}bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
-    <link href="{{ STATIC_URL }}bootstrap/css/bootstrap-responsive.min.css" rel="stylesheet" type="text/css" />
-    <link href="{{ STATIC_URL }}css/base.less" rel="stylesheet/less" type="text/css" />
-    <link href='{{ STATIC_URL }}jquery/jquery-ui-1.10.1.css' rel='stylesheet'  />
-    <link href='{{ STATIC_URL }}fullcalendar/tags/jquery.tagsinput.css' rel='stylesheet'  />
-    <link href='{{ STATIC_URL }}fullcalendar/js/jquery-ui-1.8.13.css' rel='stylesheet'  />
-	<script src='{{ STATIC_URL }}fullcalendar/js/jquery-1.8.13.min.js'></script>
-	<script src='{{ STATIC_URL }}fullcalendar/js/jquery-ui-1.8.13.min.js'></script>
-    <script src='{{ STATIC_URL }}fullcalendar/tags/jquery.tagsinput.js'></script>
+     <link href='{{ STATIC_URL }}tagsinput/bootstrap-tagsinput.css' rel='stylesheet'/>
+     <script src="{{ STATIC_URL }}jquery/jquery-2.1.1.min.js" type="text/javascript"></script>
+     <script src="{{ STATIC_URL }}tagsinput/angular.min.js" type="text/javascript"></script>
+     <script src="{{ STATIC_URL }}bootstrap/js/bootstrap2.3.2.min.js" type="text/javascript"></script>
+     <script src="{{ STATIC_URL }}tagsinput/bootstrap-tagsinput.min.js" type="text/javascript"></script>
+     <script src="{{ STATIC_URL }}tagsinput/bootstrap-tagsinput-angular.min.js" type="text/javascript"></script>
+     
   </head>
   <style>
 	body,div{
@@ -30,13 +29,10 @@
 		margin-bottom: 5px;
 		clear: both;
 	 }
-	 div.tagsinput {
-	 	width:500px;
-	 }
-	 .ui-autocomplete{
-	 	height:400px;
-	 	overflow-y: scroll;
-	 }
+	.bootstrap-tagsinput{
+		width:400px;
+	}
+	
   </style>
   <body>
 {% with product=object.product %}
@@ -63,7 +59,7 @@
 				<td>{{ sku.name }}</td>
 				<td>
 					<div class="control-group districts">
-						<input class="district-text" type="text" outer_id="{{ product.outer_id }}" outer_sku_id="{{ sku.outer_id }}" value="{% for d in sku.districts %}{{ d.0 }}-{{ d.1 }},{% endfor %}"  />
+						<input class="district-input" data-role="tagsinput" type="text" outer_id="{{ product.outer_id }}" outer_sku_id="{{ sku.outer_id }}" value="{% for d in sku.districts %}{{ d.0 }}-{{ d.1 }},{% endfor %}"  />
 					</div>
 				</td>
 			</tr>
@@ -75,7 +71,7 @@
 				<td></td>
 				<td>
 					<div class="control-group districts">
-						<input class="district-text" type="text" outer_id="{{ product.outer_id }}" outer_sku_id="" value="{% for d in product.districts %}{{ d.0 }}-{{ d.1 }},{% endfor %}"  />
+						<input class="district-input" data-role="tagsinput" type="text" outer_id="{{ product.outer_id }}" outer_sku_id="" value="{% for d in product.districts %}{{ d.0 }}-{{ d.1 }},{% endfor %}"  />
 					</div>
 				</td>
 			</tr>
@@ -85,55 +81,95 @@
 </div>
 {% endwith %}
 <script type="text/javascript">
-	//添加库位
-	function callback_add(tag){
-		var that = this;
-		$.ajax({ 
-		    type: 'POST', 
-		    url: '/items/product/district/'+$('#product_id').val()+'/', 
-		    data: {'outer_id':$(that).attr('outer_id'),'outer_sku_id':$(that).attr('outer_sku_id'),'district':tag} , 
-		    dataType: 'json',
-		    success: function(data){
-		    	if (data.code==1){
-		    		$(that).removeTag(tag);
-		    		alert('添加失败');
-					return;
-		    	}	
-		    }
-		});
-	};
-	
-	//移除库位
-	function callback_remove(tag){
-		var that = this;
-		$.ajax({ 
-		    type: 'POST', 
-		    url: '/items/product/district/delete/', 
-		    data: {'outer_id':$(that).attr('outer_id'),'outer_sku_id':$(that).attr('outer_sku_id'),'district':tag} , 
-		    dataType: 'json',
-		    success: function(data){
-		    	if (data.code==1){
-		    		alert('删除失败');
-					return;
-		    	}	
-		    }
-		});
-	};
 
-	$(".district-text").tagsInput({
-		'autocomplete_url': '/items/district/query/',
-	    'autocomplete': {selectFirst:true,autoFill:true},
-		'height':'40px',
-		'width':'400px',
-		'interactive':true,
-		'defaultText':'输入库位',
-		'placeholderColor' : '#999999',
-		'removeWithBackspace' : true,
-	    'minChars' : 1,
-	    'maxChars' : 40,
-	    'onAddTag':callback_add,
-   		'onRemoveTag':callback_remove,
+	var district_re = /[a-zA-Z0-9=]+-[0-9]+/;
+	
+	$(".district-input").tagsinput({
+		confirmKeys: [13, 44],
+		trimValue: true,
+		allowDuplicates: true,
+		typeahead: {                  
+		    source: function(query) {
+		      if (query == 'undifined' || query == '' ){return}
+		      return  $.get('/items/district/query/?q='+query);
+		   },
+		   freeInput: true
+		},
+		itemText: function(item) {
+			if (typeof(item) == "object"){
+				return item.id;
+			}
+		    return item;
+		},
+		itemValue: function(item) {
+			if (typeof(item) == "object"){
+				return item.value;
+			}
+		    return item;
+		}
 	});
+	
+	var district_inputs = $('.district-input');
+	$.each(district_inputs,function(index,ie){
+		var tags = $(ie).val().split(',');
+		$.each(tags,function(i,tag){
+			if (tag == ''){return;}
+			$(ie).tagsinput('add', {id:tag,value:tag});
+		})
+	})
+	
+	$('.district-input').on('beforeItemAdd', function(event) {
+  		// event.item: contains the item
+  		// event.cancel: set to true to prevent the item getting added
+  		var item = event.item;
+		var that = $(this);
+
+  		if (!district_re.test(item.value)){
+  			event.cancel = true;
+  			return
+  		}
+  		
+  		var callback = function(resp){
+  			if (data.code==1){
+	    		alert('添加失败');
+				return;
+	    	}
+	    	that.tagsinput('add', item);
+  		}
+  		
+  		var params = {'outer_id':$(that).attr('outer_id'),
+  					  'outer_sku_id':$(that).attr('outer_sku_id'),
+  					  'district':item.id};
+  					  
+  		$.post('/items/product/district/'+$('#product_id').val()+'/',params,callback,'json');
+  		
+	});
+	
+	$('input').on('beforeItemRemove', function(event) {
+	  // event.item: contains the item
+	  
+	  	var item = event.item;
+		var that = $(this);
+	
+		if (!district_re.test(item.value)){
+			return
+		}
+		
+		var callback = function(resp){
+			if (data.code==1){
+	    		alert('删除失败');
+				return;
+	    	}
+	    	that.tagsinput('remove', item);
+		}
+		
+		var params = {'outer_id':$(that).attr('outer_id'),
+					  'outer_sku_id':$(that).attr('outer_sku_id'),
+					  'district':item.id};
+					  
+		$.post('/items/product/district/delete/',params,callback,'json');
+	});
+
 </script>
 </body>
 </html>
