[xlmm][flashsale][dinghuo] add href in admin

--- a/shopmanager/flashsale/dinghuo/templates/admin/dinghuo/orderlist/change_list.html
+++ b/shopmanager/flashsale/dinghuo/templates/admin/dinghuo/orderlist/change_list.html
@@ -64,6 +64,11 @@
                             </a>
                         </li>
                         <li>
+                            <a href="/sale/dinghuo/dailywork/" class="addlink">
+                                大货完成进度查看
+                            </a>
+                        </li>
+                        <li>
                             <a href="{% url cl.opts|admin_urlname:'add' %}{% if is_popup %}?_popup=1{% endif %}"
                                class="addlink">
                                 {% blocktrans with cl.opts.verbose_name as name %}Add {{ name }}{% endblocktrans %}
