--- a/shopmanager/flashsale/dinghuo/templates/dinghuo/dailywork.html
+++ b/shopmanager/flashsale/dinghuo/templates/dinghuo/dailywork.html
@@ -42,7 +42,7 @@
 
     <div class="row" style="margin-top: 20px">
         <table class="table table-bordered">
-            <thead>
+            <thead style="background-color:#01B5A2;">
             <th>商品名称</th>
             <th>图片</th>
             <th>尺寸</th>
