--- a/shopmanager/flashsale/dinghuo/templates/dinghuo/dailywork.html
+++ b/shopmanager/flashsale/dinghuo/templates/dinghuo/dailywork.html
@@ -44,6 +44,7 @@
         <table class="table table-bordered">
             <thead style="background-color:#01B5A2;">
             <th>商品名称</th>
+            <th>商品编码</th>
             <th>图片</th>
             <th>尺寸</th>
             <th>销售数</th>
@@ -56,6 +57,7 @@
                     <tr>
                         {% if forloop.first %}
                             <td rowspan="{{ product.skus|length }}">{{ product.title }} </td>
+                            <td rowspan="{{ product.skus|length }}">{{ product.product_id }} </td>
                             <td rowspan="{{ product.skus|length }}"><img src="{{ product.pic_path }}" width="70px"></td>
                         {% endif %}
                         <td>{{ sku.sku_name }}</td>
