[xlmm][flashsale][dinghuo] add outer_id

--- a/shopmanager/flashsale/dinghuo/templates/dinghuo/dailywork.html
+++ b/shopmanager/flashsale/dinghuo/templates/dinghuo/dailywork.html
@@ -52,12 +52,12 @@
             <th>状态</th>
             </thead>
             <tbody>
-            {% for key,product in  targetproduct.items %}
-                {% for key,sku in product.skus %}
+            {% for outer_id,product in  targetproduct.items %}
+                {% for key2,sku in product.skus %}
                     <tr>
                         {% if forloop.first %}
                             <td rowspan="{{ product.skus|length }}">{{ product.title }} </td>
-                            <td rowspan="{{ product.skus|length }}">{{ product.product_id }} </td>
+                            <td rowspan="{{ product.skus|length }}">{{ outer_id }} </td>
                             <td rowspan="{{ product.skus|length }}"><img src="{{ product.pic_path }}" width="70px"></td>
                         {% endif %}
                         <td>{{ sku.sku_name }}</td>
