fix flashsale pay and items

--- a/shopmanager/shopapp/weixin/templates/weixin/weixinproductsync.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/weixinproductsync.html
@@ -62,6 +62,7 @@
 <div class="well">
 <form method="GET" action="." class="form-horizontal">
   <input id="product_id" type="hidden" name="product_ids" value="{{ object.product_ids }}"/>
+  <input type="hidden" name="next" value="{{ object.next }}"/>
   <div class="form-group">
     <label for="product-link1" class="col-sm-2 control-label">链接一</label>
     <div class="col-sm-10">
