--- a/shopmanager/flashsale/pay/templates/pay/mindex.html
+++ b/shopmanager/flashsale/pay/templates/pay/mindex.html
@@ -25,7 +25,7 @@
 <body>
 
   <!-- 头图 -->
-  <div id="header"><img src="{{ STATIC_URL }}images/title.png"/></div>
+  <div id="header"><img src="{{ STATIC_URL }}images/title.jpg"/></div>
 
   <!-- 导航 -->
   <div id="tab_nav">
