[xlmm][flashsale][dinghuo] optimize the code

--- a/shopmanager/flashsale/dinghuo/templates/admin/dinghuo/orderlist/change_list.html
+++ b/shopmanager/flashsale/dinghuo/templates/admin/dinghuo/orderlist/change_list.html
@@ -59,12 +59,12 @@
                 <ul class="object-tools">
                     {% block object-tools-items %}
                         <li>
-                            <a href="/sale/dinghuo/daily/" class="addlink">
+                            <a href="/sale/dinghuo/daily/" class="addlink" target="_blank" >
                                 小鹿美美每日大货统计
                             </a>
                         </li>
                         <li>
-                            <a href="/sale/dinghuo/dailywork/" class="addlink">
+                            <a href="/sale/dinghuo/dailywork/" class="addlink" target="_blank" >
                                 大货完成进度查看
                             </a>
                         </li>
