--- a/shopmanager/flashsale/dinghuo/templates/dinghuo/changedetail.html
+++ b/shopmanager/flashsale/dinghuo/templates/dinghuo/changedetail.html
@@ -179,7 +179,7 @@
                         </div>
                     </div>
                     <div class="col-lg-2"><select name="status" class="form-control">
-                        <option value="dealed">已处理</option>
+                        <option value="已处理">已处理</option>
                     </select></div>
                     <div class="col-lg-4"><input type="submit" class="btn btn-danger" value="保存"></div>
                 </form>
